templates/style.scss
// FONTS
$font-family-sans: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
$font-family-serif: "Source Serif Pro",Georgia,Times,"Times New Roman",serif;
$font-family-mono: "Source Code Pro", Menlo, Monaco, Consolas, "DejaVu Sans Mono", Inconsolata, monospace;


// COLORS - Guess what?
$color-standard: #000;             // pure black
$color-url: #4d76ae;               // blue
$color-macro: #068000;             // green
$color-struct: #df3600;            // red
$color-enum: #5e9766;              // light green
$color-type: #e57300;              // orange
$color-keyword: #8959A8;           // purple
$color-string: #718C00;            // greenish
$color-macro-in-code: #3E999F;     // blueish
$color-lifetime-incode: #B76514;   // orangish
$color-comment-in-code: #8E908C;   // light gray
$color-background-code: #F5F5F5;   // lighter gray
$color-border: #ddd;               // gray



// pure compatible media queries
$media-sm: "screen and (min-width: 35.5em)";
$media-md: "screen and (min-width: 48em)";
$media-lg: "screen and (min-width: 64em)";
$media-xl: "screen and (min-width: 80em)";
// usage:
// @media #{$media-sm} { ... }


html, button, input, select, textarea,
.pure-g [class *= "pure-u"] {
    font-family: $font-family-sans;
    color: $color-standard;
}

.pure-button-normal {
    background-color: #fff;
    box-sizing: border-box !important;
    border: 1px solid $color-border;
}

.description {
    font-family: $font-family-serif;
}

// rustdoc overrides
div.rustdoc {
    font-family: $font-family-serif;
    padding: 10px 15px 20px 15px;

    @media (max-width: 700px) {
        padding-top: 0;
    }

    .sidebar {
        @media (min-width: 701px) {
            padding-top: 32px;
        }

        .block > ul > li {
            margin-right: -10px;
        }
    }

    #source-sidebar {
        top: 32px;
    }

    #sidebar-toggle {
        top: 62px;
    }

    @media (max-width: 700px) {
        .sidebar.mobile {
            top: 32px;

            .sidebar-elems.show-it {
                top: 77px;
            }

            #sidebar-filler {
                top: 32px;
            }
        }
    }

    // this is actual fix for docs.rs navigation and rustdoc sidebar
    position: absolute;
    left: 0;
    right: 0;
    top: 32px;
}

body {
    padding: 0;
    margin: 0;
    // Since top navbar is fixed, we need to add padding to the body content.
    padding-top: 32px;
}


// this is a super nasty override for help dialog in rustdocs
// see #52 for details
body.blur > :not(#help) {
    filter: none;
    -webkit-filter: none;
}

body.blur > div.nav-container > *,
body.blur > div.cratesfyi-package-container > *,
body.blur > div.rustdoc > :not(#help) {
    filter: blur(8px);
    -webkit-filter: blur(8px);
    opacity: .7;
}


// rustdocs have 200px sidebar and
// max-width 960px main pane
// BUT I really want to make the website centered

body {
    text-align: center;
    font: 16px/1.4 $font-family-sans;
}

pre {
    font-size: 0.9rem;
    overflow: auto;
    white-space: pre;
}

div.container {
    max-width: 1160px;
    margin: 0 auto;
    text-align: left;
}

div.container-rustdoc {
    max-width: 1200px;
    text-align: left;
}

div.nav-container {
    // Nothing is supposed to be over or hovering the top navbar. Maybe add a few others '('? :)
    z-index: 999;
    height: 32px;
    border-bottom: 1px solid $color-border;
    background-color: #fff;
    left: 0;
    right: 0;
    top: 0;
    position: fixed;

    li {
        border-left: 1px solid $color-border;
    }

    .pure-menu-has-children>.pure-menu-link:after {
        font-size: 0.8em;
    }

    a {
        font-size: 0.8em;
        font-weight: 400;
    }

    .pure-menu-link:hover {
        color: $color-standard;
        background-color: inherit;
    }

    form.landing-search-form-nav {
        input.search-input-nav {
            float: right;
            max-width: 200px;
            border: none;
            margin: 0 1em 0 0;
            font-size: 0.8em;
            text-align: right;
            box-shadow: none;
            height: 31px;
            display: none;
            @media #{$media-sm} {
                display: block;
            }
        }
        input.search-input-nav:focus {
            outline: unset;
        }
    }

    .pure-menu-children {
        border: 1px solid $color-border;
        border-radius: 0 0 2px 2px;
        margin-left: -1px;
        li {
            border-left: none;
        }
    }

    // used for latest version warning
    .warn {
        color: $color-type;
    }

    .warn:hover {
        color: darken($color-type, 10%);
    }

    div.rustdoc-navigation {
        span.title {
            display: none;
            @media #{$media-sm} {
                display: inline;
            }
        }

        div.package-details-menu {
            width: 350px;

            p.description {
                font-family: $font-family-sans;
                font-size: 0.8em;
                color: #777;  // color from pure
                padding: .5em 1em;
                margin: 0;
            }

            ul.pure-menu-list {
                width: 100%;
            }

            div.right-border {
                border-right: 1px solid $color-border;
            }

            a.pure-menu-link {
                word-wrap: normal;
                white-space: normal;
            }

            div.sub-menu {
                max-height: 150px;
                overflow-y: auto;

                ul.pure-menu-list {
                    border-top: none;
                }

                li.pure-menu-item:last-child {
                    border-bottom: none;
                }
            }
        }
    }
}

div.nav-container-rustdoc {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 999;
}
/* ... */

